da: gender by pers

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -304,41 +304,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('성격', '취미'),\n",
-       " ('성격', '색깔'),\n",
        " ('성격', '성별'),\n",
-       " ('성격', '스타일'),\n",
        " ('취미', '성격'),\n",
-       " ('취미', '색깔'),\n",
        " ('취미', '성별'),\n",
-       " ('취미', '스타일'),\n",
-       " ('색깔', '성격'),\n",
-       " ('색깔', '취미'),\n",
-       " ('색깔', '성별'),\n",
-       " ('색깔', '스타일'),\n",
        " ('성별', '성격'),\n",
-       " ('성별', '취미'),\n",
-       " ('성별', '색깔'),\n",
-       " ('성별', '스타일'),\n",
-       " ('스타일', '성격'),\n",
-       " ('스타일', '취미'),\n",
-       " ('스타일', '색깔'),\n",
-       " ('스타일', '성별')]"
+       " ('성별', '취미')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(itertools.permutations(['성격', '취미', '색깔', '성별', '스타일'], 2))"
+    "# list(itertools.permutations(['성격', '취미', '색깔', '성별', '스타일'], 2))\n",
+    "list(itertools.permutations(['성격', '취미', '성별',], 2))"
    ]
   },
   {
@@ -607,11 +594,53 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 성격별 성별\n",
+    "\n",
+    "```\n",
+    "personality  gender_asia\n",
+    "느끼함          Male           34\n",
+    "단순 활발        Female         24\n",
+    "먹보           Male           60\n",
+    "무뚝뚝          Male           55\n",
+    "성숙함          Female         55\n",
+    "아이돌          Female         49\n",
+    "운동광          Male           55\n",
+    "친절함          Female         59\n",
+    "dtype: int64\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "personality  gender_asia\n",
+       "느끼함          Male           34\n",
+       "단순 활발        Female         24\n",
+       "먹보           Male           60\n",
+       "무뚝뚝          Male           55\n",
+       "성숙함          Female         55\n",
+       "아이돌          Female         49\n",
+       "운동광          Male           55\n",
+       "친절함          Female         59\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby(['personality', 'gender_asia']).size()"
+   ]
   }
  ],
  "metadata": {
