--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -641,6 +641,107 @@
    "source": [
     "chars.groupby(['personality', 'gender_asia']).size()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 취미별 성격\n",
+    "\n",
+    "```\n",
+    "hobby  personality\n",
+    "교육     느끼함            11\n",
+    "       먹보              1\n",
+    "       무뚝뚝            19\n",
+    "       성숙함            10\n",
+    "       운동광             1\n",
+    "       친절함            22\n",
+    "놀이     단순 활발           7\n",
+    "       먹보             32\n",
+    "       무뚝뚝             2\n",
+    "       아이돌             9\n",
+    "       운동광            15\n",
+    "운동     느끼함             4\n",
+    "       단순 활발           6\n",
+    "       먹보              4\n",
+    "       무뚝뚝            10\n",
+    "       성숙함             3\n",
+    "       아이돌             3\n",
+    "       운동광            36\n",
+    "음악     느끼함            14\n",
+    "       단순 활발          11\n",
+    "       무뚝뚝            13\n",
+    "       성숙함             8\n",
+    "       아이돌             5\n",
+    "       운동광             3\n",
+    "       친절함            10\n",
+    "자연     느끼함             5\n",
+    "       먹보             23\n",
+    "       무뚝뚝            11\n",
+    "       성숙함             2\n",
+    "       아이돌             1\n",
+    "       친절함            24\n",
+    "패션     성숙함            32\n",
+    "       아이돌            31\n",
+    "       친절함             3\n",
+    "dtype: int64\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hobby  personality\n",
+       "교육     느끼함            11\n",
+       "       먹보              1\n",
+       "       무뚝뚝            19\n",
+       "       성숙함            10\n",
+       "       운동광             1\n",
+       "       친절함            22\n",
+       "놀이     단순 활발           7\n",
+       "       먹보             32\n",
+       "       무뚝뚝             2\n",
+       "       아이돌             9\n",
+       "       운동광            15\n",
+       "운동     느끼함             4\n",
+       "       단순 활발           6\n",
+       "       먹보              4\n",
+       "       무뚝뚝            10\n",
+       "       성숙함             3\n",
+       "       아이돌             3\n",
+       "       운동광            36\n",
+       "음악     느끼함            14\n",
+       "       단순 활발          11\n",
+       "       무뚝뚝            13\n",
+       "       성숙함             8\n",
+       "       아이돌             5\n",
+       "       운동광             3\n",
+       "       친절함            10\n",
+       "자연     느끼함             5\n",
+       "       먹보             23\n",
+       "       무뚝뚝            11\n",
+       "       성숙함             2\n",
+       "       아이돌             1\n",
+       "       친절함            24\n",
+       "패션     성숙함            32\n",
+       "       아이돌            31\n",
+       "       친절함             3\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby(['hobby', 'personality']).size()\n"
+   ]
   }
  ],
  "metadata": {
