da: restore hobby by pers result

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -338,6 +338,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 성격별 취미\n",
+    "\n",
+    "```\n",
+    "personality  hobby\n",
+    "느끼함          교육       11\n",
+    "             운동        4\n",
+    "             음악       14\n",
+    "             자연        5\n",
+    "단순 활발        놀이        7\n",
+    "             운동        6\n",
+    "             음악       11\n",
+    "먹보           교육        1\n",
+    "             놀이       32\n",
+    "             운동        4\n",
+    "             자연       23\n",
+    "무뚝뚝          교육       19\n",
+    "             놀이        2\n",
+    "             운동       10\n",
+    "             음악       13\n",
+    "             자연       11\n",
+    "성숙함          교육       10\n",
+    "             운동        3\n",
+    "             음악        8\n",
+    "             자연        2\n",
+    "             패션       32\n",
+    "아이돌          놀이        9\n",
+    "             운동        3\n",
+    "             음악        5\n",
+    "             자연        1\n",
+    "             패션       31\n",
+    "운동광          교육        1\n",
+    "             놀이       15\n",
+    "             운동       36\n",
+    "             음악        3\n",
+    "친절함          교육       22\n",
+    "             음악       10\n",
+    "             자연       24\n",
+    "             패션        3\n",
+    "dtype: int64\n",
+    "```"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
