da: hobby by gender

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -788,6 +788,61 @@
    "source": [
     "chars.groupby(['hobby', 'personality']).size()\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 성별별 취미\n",
+    "\n",
+    "```\n",
+    "gender_asia  hobby\n",
+    "Female       교육       32\n",
+    "             놀이       16\n",
+    "             운동       12\n",
+    "             음악       34\n",
+    "             자연       27\n",
+    "             패션       66\n",
+    "Male         교육       32\n",
+    "             놀이       49\n",
+    "             운동       54\n",
+    "             음악       30\n",
+    "             자연       39\n",
+    "dtype: int64\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender_asia  hobby\n",
+       "Female       교육       32\n",
+       "             놀이       16\n",
+       "             운동       12\n",
+       "             음악       34\n",
+       "             자연       27\n",
+       "             패션       66\n",
+       "Male         교육       32\n",
+       "             놀이       49\n",
+       "             운동       54\n",
+       "             음악       30\n",
+       "             자연       39\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby(['gender_asia', 'hobby']).size()"
+   ]
   }
  ],
  "metadata": {
