da: pers by gender

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -843,6 +843,57 @@
    "source": [
     "chars.groupby(['gender_asia', 'hobby']).size()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 성별별 성격\n",
+    "\n",
+    "이게 의미가 있을 수도 있는 이유는 성별별로 성격이 따로있다는 거는 게임을 안해보면 절대 상상도 못할 일이기 때문입니다.\n",
+    "\n",
+    "```\n",
+    "gender_asia  personality\n",
+    "Female       단순 활발          24\n",
+    "             성숙함            55\n",
+    "             아이돌            49\n",
+    "             친절함            59\n",
+    "Male         느끼함            34\n",
+    "             먹보             60\n",
+    "             무뚝뚝            55\n",
+    "             운동광            55\n",
+    "dtype: int64\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender_asia  personality\n",
+       "Female       단순 활발          24\n",
+       "             성숙함            55\n",
+       "             아이돌            49\n",
+       "             친절함            59\n",
+       "Male         느끼함            34\n",
+       "             먹보             60\n",
+       "             무뚝뚝            55\n",
+       "             운동광            55\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby(['gender_asia', 'personality']).size()"
+   ]
   }
  ],
  "metadata": {
