da: gender by hobby

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -793,6 +793,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### 취미별 성별\n",
+    "\n",
+    "```\n",
+    "hobby  gender_asia\n",
+    "교육     Female         32\n",
+    "       Male           32\n",
+    "놀이     Female         16\n",
+    "       Male           49\n",
+    "운동     Female         12\n",
+    "       Male           54\n",
+    "음악     Female         34\n",
+    "       Male           30\n",
+    "자연     Female         27\n",
+    "       Male           39\n",
+    "패션     Female         66\n",
+    "dtype: int64\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hobby  gender_asia\n",
+       "교육     Female         32\n",
+       "       Male           32\n",
+       "놀이     Female         16\n",
+       "       Male           49\n",
+       "운동     Female         12\n",
+       "       Male           54\n",
+       "음악     Female         34\n",
+       "       Male           30\n",
+       "자연     Female         27\n",
+       "       Male           39\n",
+       "패션     Female         66\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby(['hobby', 'gender_asia']).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 성별별 취미\n",
     "\n",
     "```\n",
