da: eda popularity

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -1004,6 +1004,16 @@
    "source": [
     "chars.groupby(['gender_asia', 'hobby']).size()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 인기도?\n",
+    "\n",
+    "tier와 rank 2가지가 있는데 rank까지는 쓸 필요가 없었으면 합니다.\n",
+    "너무 머리 아프니까...\n"
+   ]
   }
  ],
  "metadata": {
