da: preproc villagers

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -1014,6 +1014,210 @@
     "tier와 rank 2가지가 있는데 rank까지는 쓸 필요가 없었으면 합니다.\n",
     "너무 머리 아프니까...\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 성별 분포\n",
+    "\n",
+    "깜박할뻔 했는데 성별의 분포는 해석에 꽤 중요합니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender_asia\n",
+       "Female    205\n",
+       "Male      247\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars.groupby('gender_asia').size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "남 247 : 여 205\n",
+    "\n",
+    "근데 지금 스페셜 주민도 끼어 있습니다.\n",
+    "\n",
+    "얘네는 생일 말곤 속성이 없어서 도움이 안됩니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name_en</th>\n",
+       "      <th>name_ko</th>\n",
+       "      <th>image_icon</th>\n",
+       "      <th>species</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>birthday</th>\n",
+       "      <th>birthday_month</th>\n",
+       "      <th>birthday_day</th>\n",
+       "      <th>personality</th>\n",
+       "      <th>hobby</th>\n",
+       "      <th>styles</th>\n",
+       "      <th>colors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>admiral</td>\n",
+       "      <td>Admiral</td>\n",
+       "      <td>일섭</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/brd06.png</td>\n",
+       "      <td>Bird</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>01-27</td>\n",
+       "      <td>1</td>\n",
+       "      <td>27</td>\n",
+       "      <td>무뚝뚝</td>\n",
+       "      <td>자연</td>\n",
+       "      <td>[쿨]</td>\n",
+       "      <td>[검정색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>agents</td>\n",
+       "      <td>Agent S</td>\n",
+       "      <td>2호</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/squ05.png</td>\n",
+       "      <td>Squirrel</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>07-02</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2</td>\n",
+       "      <td>아이돌</td>\n",
+       "      <td>운동</td>\n",
+       "      <td>[심플, 액티브]</td>\n",
+       "      <td>[검정색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>agnes</td>\n",
+       "      <td>Agnes</td>\n",
+       "      <td>아그네스</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/pig17.png</td>\n",
+       "      <td>Pig</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>04-21</td>\n",
+       "      <td>4</td>\n",
+       "      <td>21</td>\n",
+       "      <td>단순 활발</td>\n",
+       "      <td>놀이</td>\n",
+       "      <td>[심플, 엘레강스]</td>\n",
+       "      <td>[하양색, 핑크색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>al</td>\n",
+       "      <td>Al</td>\n",
+       "      <td>우락</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/gor08.png</td>\n",
+       "      <td>Gorilla</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>10-18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>18</td>\n",
+       "      <td>먹보</td>\n",
+       "      <td>운동</td>\n",
+       "      <td>[액티브]</td>\n",
+       "      <td>[하양색, 빨강색]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>alfonso</td>\n",
+       "      <td>Alfonso</td>\n",
+       "      <td>알베르트</td>\n",
+       "      <td>https://acnhcdn.com/latest/NpcIcon/crd00.png</td>\n",
+       "      <td>Alligator</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>06-09</td>\n",
+       "      <td>6</td>\n",
+       "      <td>9</td>\n",
+       "      <td>먹보</td>\n",
+       "      <td>놀이</td>\n",
+       "      <td>[심플]</td>\n",
+       "      <td>[빨강색, 파랑색]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        id  name_en name_ko                                    image_icon  \\\n",
+       "0  admiral  Admiral      일섭  https://acnhcdn.com/latest/NpcIcon/brd06.png   \n",
+       "1   agents  Agent S      2호  https://acnhcdn.com/latest/NpcIcon/squ05.png   \n",
+       "2    agnes    Agnes    아그네스  https://acnhcdn.com/latest/NpcIcon/pig17.png   \n",
+       "3       al       Al      우락  https://acnhcdn.com/latest/NpcIcon/gor08.png   \n",
+       "4  alfonso  Alfonso    알베르트  https://acnhcdn.com/latest/NpcIcon/crd00.png   \n",
+       "\n",
+       "     species  gender birthday  birthday_month  birthday_day personality hobby  \\\n",
+       "0       Bird    Male    01-27               1            27         무뚝뚝    자연   \n",
+       "1   Squirrel  Female    07-02               7             2         아이돌    운동   \n",
+       "2        Pig  Female    04-21               4            21       단순 활발    놀이   \n",
+       "3    Gorilla    Male    10-18              10            18          먹보    운동   \n",
+       "4  Alligator    Male    06-09               6             9          먹보    놀이   \n",
+       "\n",
+       "       styles      colors  \n",
+       "0         [쿨]  [검정색, 파랑색]  \n",
+       "1   [심플, 액티브]  [검정색, 파랑색]  \n",
+       "2  [심플, 엘레강스]  [하양색, 핑크색]  \n",
+       "3       [액티브]  [하양색, 빨강색]  \n",
+       "4        [심플]  [빨강색, 파랑색]  "
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_v = pd.read_excel('./datasets/characters-similarity.xlsx')\n",
+    "chars_v['colors'] = chars_v['colors'].apply(ast.literal_eval)\n",
+    "chars_v['styles'] = chars_v['styles'].apply(ast.literal_eval)\n",
+    "chars_v.head()"
+   ]
   }
  ],
  "metadata": {
