da: re-evaluate gender dist

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -1218,6 +1218,38 @@
     "chars_v['styles'] = chars_v['styles'].apply(ast.literal_eval)\n",
     "chars_v.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender\n",
+       "Female    187\n",
+       "Male      204\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_v.groupby('gender').size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "f: 187 vs. m: 204\n",
+    "\n",
+    "대체로 비슷비슷한 것 같습니다.\n"
+   ]
   }
  ],
  "metadata": {
