da: pop vs gender

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -1221,7 +1221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1233,7 +1233,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1249,6 +1249,90 @@
     "f: 187 vs. m: 204\n",
     "\n",
     "대체로 비슷비슷한 것 같습니다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 성별/인기도\n",
+    "\n",
+    "여자가 남자보다 약간 적은 것을 감안하면 여자일수록 약간 인기가 많은 경향이 있습니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chars_v = chars[chars['special'].eq(False)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender  tier\n",
+       "Female  1.0      6\n",
+       "        2.0     14\n",
+       "        3.0     18\n",
+       "        4.0     30\n",
+       "        5.0     58\n",
+       "        6.0     61\n",
+       "Male    1.0      6\n",
+       "        2.0     10\n",
+       "        3.0     11\n",
+       "        4.0     25\n",
+       "        5.0     55\n",
+       "        6.0     96\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_v.groupby(['gender', 'tier']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tier  gender\n",
+       "1.0   Female     6\n",
+       "      Male       6\n",
+       "2.0   Female    14\n",
+       "      Male      10\n",
+       "3.0   Female    18\n",
+       "      Male      11\n",
+       "4.0   Female    30\n",
+       "      Male      25\n",
+       "5.0   Female    58\n",
+       "      Male      55\n",
+       "6.0   Female    61\n",
+       "      Male      96\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_v.groupby(['tier', 'gender']).size()"
    ]
   }
  ],
