--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -1334,6 +1334,244 @@
    "source": [
     "chars_v.groupby(['tier', 'gender']).size()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 성격 / 인기도\n",
+    "\n",
+    "성격과 인기도는 뚜렷한 상관 관계는 없는 것 같습니다.\n",
+    "\n",
+    "\n",
+    "```\n",
+    "personality  tier\n",
+    "느끼함          1.0      2\n",
+    "             2.0      2\n",
+    "             3.0      2\n",
+    "             4.0      6\n",
+    "             5.0      5\n",
+    "             6.0     17\n",
+    "단순 활발        2.0      1\n",
+    "             3.0      5\n",
+    "             4.0      6\n",
+    "             5.0      8\n",
+    "             6.0      4\n",
+    "먹보           1.0      4\n",
+    "             2.0      4\n",
+    "             3.0      2\n",
+    "             4.0      9\n",
+    "             5.0     19\n",
+    "             6.0     21\n",
+    "무뚝뚝          2.0      2\n",
+    "             3.0      4\n",
+    "             4.0      5\n",
+    "             5.0     13\n",
+    "             6.0     31\n",
+    "성숙함          1.0      2\n",
+    "             2.0      1\n",
+    "             3.0      1\n",
+    "             4.0      6\n",
+    "             5.0     15\n",
+    "             6.0     30\n",
+    "아이돌          2.0      6\n",
+    "             3.0      4\n",
+    "             4.0     10\n",
+    "             5.0     16\n",
+    "             6.0     13\n",
+    "운동광          2.0      2\n",
+    "             3.0      3\n",
+    "             4.0      5\n",
+    "             5.0     18\n",
+    "             6.0     27\n",
+    "친절함          1.0      4\n",
+    "             2.0      6\n",
+    "             3.0      8\n",
+    "             4.0      8\n",
+    "             5.0     19\n",
+    "             6.0     14\n",
+    "dtype: int64\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "tier  personality\n",
+    "1.0   느끼함             2\n",
+    "      먹보              4\n",
+    "      성숙함             2\n",
+    "      친절함             4\n",
+    "2.0   느끼함             2\n",
+    "      단순 활발           1\n",
+    "      먹보              4\n",
+    "      무뚝뚝             2\n",
+    "      성숙함             1\n",
+    "      아이돌             6\n",
+    "      운동광             2\n",
+    "      친절함             6\n",
+    "3.0   느끼함             2\n",
+    "      단순 활발           5\n",
+    "      먹보              2\n",
+    "      무뚝뚝             4\n",
+    "      성숙함             1\n",
+    "      아이돌             4\n",
+    "      운동광             3\n",
+    "      친절함             8\n",
+    "4.0   느끼함             6\n",
+    "      단순 활발           6\n",
+    "      먹보              9\n",
+    "      무뚝뚝             5\n",
+    "      성숙함             6\n",
+    "      아이돌            10\n",
+    "      운동광             5\n",
+    "      친절함             8\n",
+    "5.0   느끼함             5\n",
+    "      단순 활발           8\n",
+    "      먹보             19\n",
+    "      무뚝뚝            13\n",
+    "      성숙함            15\n",
+    "      아이돌            16\n",
+    "      운동광            18\n",
+    "      친절함            19\n",
+    "6.0   느끼함            17\n",
+    "      단순 활발           4\n",
+    "      먹보             21\n",
+    "      무뚝뚝            31\n",
+    "      성숙함            30\n",
+    "      아이돌            13\n",
+    "      운동광            27\n",
+    "      친절함            14\n",
+    "dtype: int64\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "personality  tier\n",
+       "느끼함          1.0      2\n",
+       "             2.0      2\n",
+       "             3.0      2\n",
+       "             4.0      6\n",
+       "             5.0      5\n",
+       "             6.0     17\n",
+       "단순 활발        2.0      1\n",
+       "             3.0      5\n",
+       "             4.0      6\n",
+       "             5.0      8\n",
+       "             6.0      4\n",
+       "먹보           1.0      4\n",
+       "             2.0      4\n",
+       "             3.0      2\n",
+       "             4.0      9\n",
+       "             5.0     19\n",
+       "             6.0     21\n",
+       "무뚝뚝          2.0      2\n",
+       "             3.0      4\n",
+       "             4.0      5\n",
+       "             5.0     13\n",
+       "             6.0     31\n",
+       "성숙함          1.0      2\n",
+       "             2.0      1\n",
+       "             3.0      1\n",
+       "             4.0      6\n",
+       "             5.0     15\n",
+       "             6.0     30\n",
+       "아이돌          2.0      6\n",
+       "             3.0      4\n",
+       "             4.0     10\n",
+       "             5.0     16\n",
+       "             6.0     13\n",
+       "운동광          2.0      2\n",
+       "             3.0      3\n",
+       "             4.0      5\n",
+       "             5.0     18\n",
+       "             6.0     27\n",
+       "친절함          1.0      4\n",
+       "             2.0      6\n",
+       "             3.0      8\n",
+       "             4.0      8\n",
+       "             5.0     19\n",
+       "             6.0     14\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_v.groupby(['personality', 'tier']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tier  personality\n",
+       "1.0   느끼함             2\n",
+       "      먹보              4\n",
+       "      성숙함             2\n",
+       "      친절함             4\n",
+       "2.0   느끼함             2\n",
+       "      단순 활발           1\n",
+       "      먹보              4\n",
+       "      무뚝뚝             2\n",
+       "      성숙함             1\n",
+       "      아이돌             6\n",
+       "      운동광             2\n",
+       "      친절함             6\n",
+       "3.0   느끼함             2\n",
+       "      단순 활발           5\n",
+       "      먹보              2\n",
+       "      무뚝뚝             4\n",
+       "      성숙함             1\n",
+       "      아이돌             4\n",
+       "      운동광             3\n",
+       "      친절함             8\n",
+       "4.0   느끼함             6\n",
+       "      단순 활발           6\n",
+       "      먹보              9\n",
+       "      무뚝뚝             5\n",
+       "      성숙함             6\n",
+       "      아이돌            10\n",
+       "      운동광             5\n",
+       "      친절함             8\n",
+       "5.0   느끼함             5\n",
+       "      단순 활발           8\n",
+       "      먹보             19\n",
+       "      무뚝뚝            13\n",
+       "      성숙함            15\n",
+       "      아이돌            16\n",
+       "      운동광            18\n",
+       "      친절함            19\n",
+       "6.0   느끼함            17\n",
+       "      단순 활발           4\n",
+       "      먹보             21\n",
+       "      무뚝뚝            31\n",
+       "      성숙함            30\n",
+       "      아이돌            13\n",
+       "      운동광            27\n",
+       "      친절함            14\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 73,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_v.groupby(['tier', 'personality']).size()"
+   ]
   }
  ],
  "metadata": {
