da: pop vs hobby

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -1572,6 +1572,204 @@
    "source": [
     "chars_v.groupby(['tier', 'personality']).size()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 취미 / 인기도\n",
+    "\n",
+    "취미별 인기도도 뚜렷한 경향은 없습니다.\n",
+    "얼핏 보면 자연이 꽤 많아 보이기도 하지만 확신할 수준은 아닙니다.\n",
+    "\n",
+    "```\n",
+    "hobby  tier\n",
+    "교육     1.0      2\n",
+    "       2.0      5\n",
+    "       3.0      4\n",
+    "       4.0     10\n",
+    "       5.0     13\n",
+    "       6.0     30\n",
+    "놀이     1.0      1\n",
+    "       2.0      6\n",
+    "       3.0      6\n",
+    "       4.0     12\n",
+    "       5.0     15\n",
+    "       6.0     24\n",
+    "운동     2.0      2\n",
+    "       3.0      2\n",
+    "       4.0      4\n",
+    "       5.0     20\n",
+    "       6.0     38\n",
+    "음악     1.0      3\n",
+    "       2.0      7\n",
+    "       3.0      6\n",
+    "       4.0      9\n",
+    "       5.0     19\n",
+    "       6.0     20\n",
+    "자연     1.0      6\n",
+    "       2.0      3\n",
+    "       3.0      8\n",
+    "       4.0     10\n",
+    "       5.0     19\n",
+    "       6.0     20\n",
+    "패션     2.0      1\n",
+    "       3.0      3\n",
+    "       4.0     10\n",
+    "       5.0     27\n",
+    "       6.0     25\n",
+    "dtype: int64\n",
+    "```\n",
+    "\n",
+    "```\n",
+    "tier  hobby\n",
+    "1.0   교육        2\n",
+    "      놀이        1\n",
+    "      음악        3\n",
+    "      자연        6\n",
+    "2.0   교육        5\n",
+    "      놀이        6\n",
+    "      운동        2\n",
+    "      음악        7\n",
+    "      자연        3\n",
+    "      패션        1\n",
+    "3.0   교육        4\n",
+    "      놀이        6\n",
+    "      운동        2\n",
+    "      음악        6\n",
+    "      자연        8\n",
+    "      패션        3\n",
+    "4.0   교육       10\n",
+    "      놀이       12\n",
+    "      운동        4\n",
+    "      음악        9\n",
+    "      자연       10\n",
+    "      패션       10\n",
+    "5.0   교육       13\n",
+    "      놀이       15\n",
+    "      운동       20\n",
+    "      음악       19\n",
+    "      자연       19\n",
+    "      패션       27\n",
+    "6.0   교육       30\n",
+    "      놀이       24\n",
+    "      운동       38\n",
+    "      음악       20\n",
+    "      자연       20\n",
+    "      패션       25\n",
+    "dtype: int64\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "hobby  tier\n",
+       "교육     1.0      2\n",
+       "       2.0      5\n",
+       "       3.0      4\n",
+       "       4.0     10\n",
+       "       5.0     13\n",
+       "       6.0     30\n",
+       "놀이     1.0      1\n",
+       "       2.0      6\n",
+       "       3.0      6\n",
+       "       4.0     12\n",
+       "       5.0     15\n",
+       "       6.0     24\n",
+       "운동     2.0      2\n",
+       "       3.0      2\n",
+       "       4.0      4\n",
+       "       5.0     20\n",
+       "       6.0     38\n",
+       "음악     1.0      3\n",
+       "       2.0      7\n",
+       "       3.0      6\n",
+       "       4.0      9\n",
+       "       5.0     19\n",
+       "       6.0     20\n",
+       "자연     1.0      6\n",
+       "       2.0      3\n",
+       "       3.0      8\n",
+       "       4.0     10\n",
+       "       5.0     19\n",
+       "       6.0     20\n",
+       "패션     2.0      1\n",
+       "       3.0      3\n",
+       "       4.0     10\n",
+       "       5.0     27\n",
+       "       6.0     25\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_v.groupby(['hobby', 'tier']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tier  hobby\n",
+       "1.0   교육        2\n",
+       "      놀이        1\n",
+       "      음악        3\n",
+       "      자연        6\n",
+       "2.0   교육        5\n",
+       "      놀이        6\n",
+       "      운동        2\n",
+       "      음악        7\n",
+       "      자연        3\n",
+       "      패션        1\n",
+       "3.0   교육        4\n",
+       "      놀이        6\n",
+       "      운동        2\n",
+       "      음악        6\n",
+       "      자연        8\n",
+       "      패션        3\n",
+       "4.0   교육       10\n",
+       "      놀이       12\n",
+       "      운동        4\n",
+       "      음악        9\n",
+       "      자연       10\n",
+       "      패션       10\n",
+       "5.0   교육       13\n",
+       "      놀이       15\n",
+       "      운동       20\n",
+       "      음악       19\n",
+       "      자연       19\n",
+       "      패션       27\n",
+       "6.0   교육       30\n",
+       "      놀이       24\n",
+       "      운동       38\n",
+       "      음악       20\n",
+       "      자연       20\n",
+       "      패션       25\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_v.groupby(['tier', 'hobby']).size()"
+   ]
   }
  ],
  "metadata": {
