da: special npc's popularity

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -1770,6 +1770,74 @@
    "source": [
     "chars_v.groupby(['tier', 'hobby']).size()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 특수 주민은??\n",
+    "\n",
+    "특수 주민은 다른 정보는 없어도 최소한 성별은 볼 수 있습니다.\n",
+    "성별을 검사해 봅시다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chars_s = chars[chars['special'].eq(True)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], dtype: int64)"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_s.groupby(['gender', 'tier']).size()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Series([], dtype: int64)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "chars_s.groupby(['tier', 'gender']).size()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "이런.. 특수 npc는 인기도도 없습니다.\n",
+    "\n",
+    "인기는 많을텐데...\n"
+   ]
   }
  ],
  "metadata": {
