da: pop vs species

--- a/da/chars-eda2.ipynb
+++ b/da/chars-eda2.ipynb
@@ -1838,6 +1838,304 @@
     "\n",
     "인기는 많을텐데...\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 인기도의 종별 분포?\n",
+    "\n",
+    "종은 외모에 상당히 결정적입니다.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "--> 뭔가 경향이 있긴 한데 종이 너무 많아서 도저히 알 수가 없다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "species  tier\n",
+      "개        2.0      2\n",
+      "         3.0      3\n",
+      "         4.0      4\n",
+      "         5.0      4\n",
+      "         6.0      3\n",
+      "개구리      2.0      1\n",
+      "         3.0      1\n",
+      "         4.0      1\n",
+      "         5.0      8\n",
+      "         6.0      7\n",
+      "개미핥기     5.0      3\n",
+      "         6.0      4\n",
+      "고릴라      5.0      1\n",
+      "         6.0      8\n",
+      "고양이      1.0      2\n",
+      "         2.0      6\n",
+      "         3.0      4\n",
+      "         4.0      4\n",
+      "         5.0      5\n",
+      "         6.0      2\n",
+      "곰        4.0      3\n",
+      "         5.0      3\n",
+      "         6.0      9\n",
+      "꼬마곰      1.0      3\n",
+      "         2.0      1\n",
+      "         3.0      1\n",
+      "         4.0      2\n",
+      "         5.0      5\n",
+      "         6.0      4\n",
+      "늑대       2.0      2\n",
+      "         3.0      4\n",
+      "         4.0      3\n",
+      "         5.0      2\n",
+      "다람쥐      1.0      1\n",
+      "         2.0      1\n",
+      "         3.0      2\n",
+      "         4.0      4\n",
+      "         5.0      6\n",
+      "         6.0      4\n",
+      "닭        5.0      4\n",
+      "         6.0      5\n",
+      "독수리      2.0      1\n",
+      "         5.0      3\n",
+      "         6.0      5\n",
+      "돼지       4.0      1\n",
+      "         5.0      1\n",
+      "         6.0     12\n",
+      "말        2.0      1\n",
+      "         3.0      1\n",
+      "         4.0      1\n",
+      "         5.0      4\n",
+      "         6.0      8\n",
+      "문어       1.0      2\n",
+      "         3.0      1\n",
+      "사슴       1.0      1\n",
+      "         2.0      3\n",
+      "         3.0      3\n",
+      "         4.0      3\n",
+      "사자       4.0      1\n",
+      "         5.0      1\n",
+      "         6.0      5\n",
+      "새        5.0      3\n",
+      "         6.0     10\n",
+      "수소       5.0      2\n",
+      "         6.0      4\n",
+      "악어       4.0      2\n",
+      "         5.0      1\n",
+      "         6.0      4\n",
+      "암소       5.0      3\n",
+      "         6.0      1\n",
+      "양        2.0      2\n",
+      "         4.0      1\n",
+      "         5.0      5\n",
+      "         6.0      5\n",
+      "염소       1.0      1\n",
+      "         3.0      2\n",
+      "         4.0      2\n",
+      "         6.0      3\n",
+      "오리       2.0      2\n",
+      "         4.0      3\n",
+      "         5.0      3\n",
+      "         6.0      9\n",
+      "원숭이      4.0      1\n",
+      "         5.0      4\n",
+      "         6.0      3\n",
+      "쥐        4.0      1\n",
+      "         5.0      4\n",
+      "         6.0     10\n",
+      "캥거루      5.0      3\n",
+      "         6.0      5\n",
+      "코끼리      3.0      1\n",
+      "         4.0      2\n",
+      "         5.0      3\n",
+      "         6.0      5\n",
+      "코뿔소      1.0      1\n",
+      "         4.0      1\n",
+      "         5.0      3\n",
+      "         6.0      1\n",
+      "코알라      3.0      1\n",
+      "         4.0      3\n",
+      "         5.0      5\n",
+      "타조       2.0      1\n",
+      "         4.0      2\n",
+      "         5.0      4\n",
+      "         6.0      3\n",
+      "토끼       1.0      1\n",
+      "         3.0      2\n",
+      "         4.0      3\n",
+      "         5.0     10\n",
+      "         6.0      4\n",
+      "펭귄       2.0      1\n",
+      "         4.0      4\n",
+      "         5.0      4\n",
+      "         6.0      4\n",
+      "하마       5.0      2\n",
+      "         6.0      5\n",
+      "햄스터      3.0      3\n",
+      "         4.0      1\n",
+      "         5.0      2\n",
+      "         6.0      2\n",
+      "호랑이      4.0      2\n",
+      "         5.0      2\n",
+      "         6.0      3\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars_v.groupby(['species', 'tier']).size()\n",
+    "print(_.to_string())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tier  species\n",
+      "1.0   고양이         2\n",
+      "      꼬마곰         3\n",
+      "      다람쥐         1\n",
+      "      문어          2\n",
+      "      사슴          1\n",
+      "      염소          1\n",
+      "      코뿔소         1\n",
+      "      토끼          1\n",
+      "2.0   개           2\n",
+      "      개구리         1\n",
+      "      고양이         6\n",
+      "      꼬마곰         1\n",
+      "      늑대          2\n",
+      "      다람쥐         1\n",
+      "      독수리         1\n",
+      "      말           1\n",
+      "      사슴          3\n",
+      "      양           2\n",
+      "      오리          2\n",
+      "      타조          1\n",
+      "      펭귄          1\n",
+      "3.0   개           3\n",
+      "      개구리         1\n",
+      "      고양이         4\n",
+      "      꼬마곰         1\n",
+      "      늑대          4\n",
+      "      다람쥐         2\n",
+      "      말           1\n",
+      "      문어          1\n",
+      "      사슴          3\n",
+      "      염소          2\n",
+      "      코끼리         1\n",
+      "      코알라         1\n",
+      "      토끼          2\n",
+      "      햄스터         3\n",
+      "4.0   개           4\n",
+      "      개구리         1\n",
+      "      고양이         4\n",
+      "      곰           3\n",
+      "      꼬마곰         2\n",
+      "      늑대          3\n",
+      "      다람쥐         4\n",
+      "      돼지          1\n",
+      "      말           1\n",
+      "      사슴          3\n",
+      "      사자          1\n",
+      "      악어          2\n",
+      "      양           1\n",
+      "      염소          2\n",
+      "      오리          3\n",
+      "      원숭이         1\n",
+      "      쥐           1\n",
+      "      코끼리         2\n",
+      "      코뿔소         1\n",
+      "      코알라         3\n",
+      "      타조          2\n",
+      "      토끼          3\n",
+      "      펭귄          4\n",
+      "      햄스터         1\n",
+      "      호랑이         2\n",
+      "5.0   개           4\n",
+      "      개구리         8\n",
+      "      개미핥기        3\n",
+      "      고릴라         1\n",
+      "      고양이         5\n",
+      "      곰           3\n",
+      "      꼬마곰         5\n",
+      "      늑대          2\n",
+      "      다람쥐         6\n",
+      "      닭           4\n",
+      "      독수리         3\n",
+      "      돼지          1\n",
+      "      말           4\n",
+      "      사자          1\n",
+      "      새           3\n",
+      "      수소          2\n",
+      "      악어          1\n",
+      "      암소          3\n",
+      "      양           5\n",
+      "      오리          3\n",
+      "      원숭이         4\n",
+      "      쥐           4\n",
+      "      캥거루         3\n",
+      "      코끼리         3\n",
+      "      코뿔소         3\n",
+      "      코알라         5\n",
+      "      타조          4\n",
+      "      토끼         10\n",
+      "      펭귄          4\n",
+      "      하마          2\n",
+      "      햄스터         2\n",
+      "      호랑이         2\n",
+      "6.0   개           3\n",
+      "      개구리         7\n",
+      "      개미핥기        4\n",
+      "      고릴라         8\n",
+      "      고양이         2\n",
+      "      곰           9\n",
+      "      꼬마곰         4\n",
+      "      다람쥐         4\n",
+      "      닭           5\n",
+      "      독수리         5\n",
+      "      돼지         12\n",
+      "      말           8\n",
+      "      사자          5\n",
+      "      새          10\n",
+      "      수소          4\n",
+      "      악어          4\n",
+      "      암소          1\n",
+      "      양           5\n",
+      "      염소          3\n",
+      "      오리          9\n",
+      "      원숭이         3\n",
+      "      쥐          10\n",
+      "      캥거루         5\n",
+      "      코끼리         5\n",
+      "      코뿔소         1\n",
+      "      타조          3\n",
+      "      토끼          4\n",
+      "      펭귄          4\n",
+      "      하마          5\n",
+      "      햄스터         2\n",
+      "      호랑이         3\n"
+     ]
+    }
+   ],
+   "source": [
+    "chars_v.groupby(['tier', 'species']).size()\n",
+    "print(_.to_string())"
+   ]
   }
  ],
  "metadata": {
